# transports/http/payment.go
@@ -4,17 +4,17 @@ import (
 	"net/http"
 
 	"github.com/labstack/echo/v4"
-	"github.com/libsv/go-p4"
+	"github.com/libsv/go-dpp"
 	"github.com/pkg/errors"
 )
 
 // paymentHandler is an http handler that supports BIP-270 requests.
 type paymentHandler struct {
-	svc p4.PaymentService
+	svc dpp.PaymentService
 }
 
 // NewPaymentHandler will create and return a new PaymentHandler.
-func NewPaymentHandler(svc p4.PaymentService) *paymentHandler {
+func NewPaymentHandler(svc dpp.PaymentService) *paymentHandler {
 	return &paymentHandler{
 		svc: svc,
 	}
@@ -31,17 +31,17 @@ func (h *paymentHandler) RegisterRoutes(g *echo.Group) {
 // @Accept json
 // @Produce json
 // @Param paymentID path string true "Payment ID"
-// @Param body body p4.PaymentCreateArgs true "payment message used in BIP270"
-// @Success 201 {object} p4.PaymentACK "if success, error code will be empty, otherwise it will be filled in with reason"
+// @Param body body dpp.PaymentCreateArgs true "payment message used in BIP270"
+// @Success 201 {object} dpp.PaymentACK "if success, error code will be empty, otherwise it will be filled in with reason"
 // @Failure 404 {object} server.ClientError "returned if the paymentID has not been found"
 // @Failure 400 {object} server.ClientError "returned if the user input is invalid, usually an issue with the paymentID"
 // @Failure 500 {string} string "returned if there is an unexpected internal error"
 // @Router /api/v1/payment/{paymentID} [POST].
 func (h *paymentHandler) createPayment(e echo.Context) error {
-	args := p4.PaymentCreateArgs{
+	args := dpp.PaymentCreateArgs{
 		PaymentID: e.Param("paymentID"),
 	}
-	var req p4.Payment
+	var req dpp.Payment
 	if err := e.Bind(&req); err != nil {
 		return errors.WithStack(err)
 	}
