# transports/http/payment_request.go
@@ -4,20 +4,19 @@ import (
 	"net/http"
 
 	"github.com/labstack/echo/v4"
+	"github.com/libsv/go-dpp"
 	"github.com/pkg/errors"
-
-	"github.com/libsv/go-p4"
 )
 
 type (
 	// paymentRequestHandler is an http handler that supports BIP-270 requests.
 	paymentRequestHandler struct {
-		svc p4.PaymentRequestService
+		svc dpp.PaymentRequestService
 	}
 )
 
 // NewPaymentRequestHandler will create and return a new PaymentRequestHandler.
-func NewPaymentRequestHandler(svc p4.PaymentRequestService) *paymentRequestHandler {
+func NewPaymentRequestHandler(svc dpp.PaymentRequestService) *paymentRequestHandler {
 	return &paymentRequestHandler{
 		svc: svc,
 	}
@@ -35,13 +34,13 @@ func (h *paymentRequestHandler) RegisterRoutes(g *echo.Group) {
 // @Accept json
 // @Produce json
 // @Param paymentID path string true "Payment ID"
-// @Success 201 {object} p4.PaymentRequest "contains outputs, merchant data and expiry information, used by the payee to construct a transaction"
+// @Success 201 {object} dpp.PaymentRequest "contains outputs, merchant data and expiry information, used by the payee to construct a transaction"
 // @Failure 404 {object} server.ClientError "returned if the paymentID has not been found"
 // @Failure 400 {object} server.ClientError "returned if the user input is invalid, usually an issue with the paymentID"
 // @Failure 500 {string} string "returned if there is an unexpected internal error"
 // @Router /api/v1/payment/{paymentID} [GET].
 func (h *paymentRequestHandler) buildPaymentRequest(e echo.Context) error {
-	var args p4.PaymentRequestArgs
+	var args dpp.PaymentRequestArgs
 	if err := e.Bind(&args); err != nil {
 		return errors.Wrap(err, "failed to bind request")
 	}
